--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "create-redux-store": "^1.1.2",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
