--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,8 +11,10 @@
     "create-redux-store": "^1.1.2",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.5",
