--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "create-redux-store": "^1.1.2",
     "font-awesome": "^4.7.0",
+    "formik-yup": "^0.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-content-loader": "^6.2.0",
@@ -20,6 +21,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
